[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/Button.gd" type="Script" id=1]
[ext_resource path="res://ui/button.png" type="Texture" id=2]
[ext_resource path="res://ui/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://dynamic_font.tres" type="DynamicFont" id=4]

[node name="Button" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 15.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]
texture = ExtResource( 2 )
texture_hover = ExtResource( 3 )
text = ""

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Region", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteHover" type="Sprite" parent="." index="1"]

visible = false
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]


